k8s/krakend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: krakend
  namespace: astrogo
spec:
  selector:
    app: krakend
  ports:
  - port: 80
    targetPort: 8080
  type: ClusterIP
